Add placeholder sections for the home page

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -8,6 +8,7 @@
 :root {
 	--primary-color: #121212;
 	--secondary-color: #ff4136;
+	--tetriary-color: #3db0c1;
 	--off-white: #eee;
 
 	/*Fonts and font sizes */
