--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -28,9 +28,36 @@ a {
 	text-decoration: none;
 }
 
+button {
+	all: initial;
+}
+
 .active {
 	font-weight: bold;
 	text-decoration: underline;
+}
+
+.center-wrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.orange-button {
+	color: var(--primary-color);
+	background-color: var(--secondary-color);
+	font-family: Karla;
+	font-weight: bold;
+	font-size: var(--normal-text-size);
+	padding: 0.5rem;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.orange-button:hover,
+.orange-button:focus {
+	background-color: #dd3146;
 }
 
 /* * * * * * * *
@@ -95,4 +122,124 @@ nav {
 		justify-content: center;
 		gap: 30px;
 	}
+}
+
+/* * * * * * * *
+	3.FOOTER
+* * * * * * * */
+
+/* * * * * * * *
+	4.HOME
+* * * * * * * */
+
+.carousel-section {
+	width: 80vw;
+	height: 70vh;
+	background-color: red;
+}
+
+.carousel-container {
+	height: 100%;
+	align-items: normal;
+}
+
+.hero-carousel-item {
+	position: relative;
+	isolation: isolate;
+}
+
+.text-overlay {
+	position: absolute;
+	width: 50ch;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 2;
+}
+
+.text-overlay > h1 {
+	color: var(--secondary-color);
+	font-weight: bold;
+	font-size: var(--bigest-text-size);
+	line-height: 2rem;
+}
+
+.text-overlay > p {
+	color: var(--off-white);
+	line-height: 2rem;
+	margin: 20px 0;
+	font-size: var(--biger-text-size);
+}
+
+.styled-flair {
+	background-color: var(--tetriary-color);
+	color: var(--primary-color);
+	font-size: var(--normal-text-size);
+	font-weight: bold;
+	padding: 20px;
+	position: absolute;
+	z-index: 2;;
+}
+
+.featured {
+	position: absolute;
+	top: 50%;
+	transform: translate(10%, -50%);
+	z-index: 2;
+	display: flex;
+	align-items: center;
+	gap: 40px;
+}
+
+.featured img {
+	width: 40%;
+}
+
+.featured-details {
+	color: var(--off-white);
+	width: 40ch;
+}
+
+.featured-details > * {
+	margin-bottom: 20px;
+}
+
+.featured-details > h3 {
+	color: var(--tetriary-color);
+	font-size: var(--biger-text-size);
+	font-weight: bold;
+}
+
+.featured-details > p {
+	font-size: var(--normal-text-size);
+	line-height: 1.4rem;
+}
+
+.featured-price {
+	font-weight: bold;
+	color: var(--tetriary-color);
+}
+
+.carousel-image {
+	width: 100%;
+	height: 70vh;
+	filter: brightness(0.4);
+	z-index: 1;
+}
+
+.carousel-section .react-multiple-carousel__arrow--left,
+.carousel-section .react-multiple-carousel__arrow--right {
+	top: 50%;
+}
+
+.carousel-section .react-multiple-carousel__arrow--left {
+	left: 0;
+}
+
+.carousel-section .react-multiple-carousel__arrow--right {
+	right: 0;
+}
+
+.carousel-section .react-multi-carousel-dot--active button {
+	background-color: var(--off-white);
 }
