--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -131,6 +131,11 @@ nav {
 /* * * * * * * *
 	4.HOME
 * * * * * * * */
+
+.home > section {
+	margin-top: 5vh;
+}
+
 /* * * * * * * *
 	4.1.HERO
 * * * * * * * */
@@ -231,16 +236,16 @@ nav {
 	z-index: 1;
 }
 
-.carousel-section .react-multiple-carousel__arrow--left,
-.carousel-section .react-multiple-carousel__arrow--right {
+.react-multiple-carousel__arrow--left,
+.react-multiple-carousel__arrow--right {
 	top: 50%;
 }
 
-.carousel-section .react-multiple-carousel__arrow--left {
+.react-multiple-carousel__arrow--left {
 	left: 0;
 }
 
-.carousel-section .react-multiple-carousel__arrow--right {
+.react-multiple-carousel__arrow--right {
 	right: 0;
 }
 
@@ -253,10 +258,60 @@ nav {
 * * * * * * * */
 .home-games-section {
 	width: 80vw;
-	height: 70vh;
-	background-color: red;
+	height: 60vh;
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
+}
+
+.home-games-section > h2 {
+	color: var(--secondary-color);
+	font-weight: bold;
+	font-size: var(--bigest-text-size);
+	align-self: center;
+}
+
+.home-games-section > button {
+	align-self: center;
 }
 
 .game-carousel-container {
+	height: 40vh;
+	align-items: normal;
+	gap: 10px;
+	color: var(--off-white);
+}
+
+.game-carousel-container .game-card {
 	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 10px;
+}
+
+.game-carousel-container .game-card-image {
+	height: 70%; 
+}
+
+/* * * * * * * *
+   5.GAME CARD
+* * * * * * * */
+
+.game-card-title > a {
+	color: var(--tetriary-color);
+	font-weight: bold;
+	font-size: var(--normal-text-size);
+}
+
+.game-card-genres-section {
+	color: rgb(56, 73, 89);
+	display: flex;
+	flex-wrap: wrap;
+	gap: 2ch;
+}
+
+.game-card-price {
+	font-weight: bold;
+	color: var(--tetriary-color);
 }
