--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -147,6 +147,42 @@ nav {
 	3.FOOTER
 * * * * * * * */
 
+footer {
+	display: flex;
+	justify-content: center;
+	padding: 30px 0;
+}
+
+.footer-links {
+	display: flex;
+	gap: 20px;
+}
+
+.footer-links > * {
+	display: flex;
+	flex-direction: column;
+}
+
+footer h3 {
+	color:var(--tetriary-color);
+	font-size: var(--normal-text-size);
+	font-weight: bold;
+}
+
+.footer-links a {
+	color: #a0a0a0;
+}
+
+.footer-links a:hover,
+.footer-links a:focus {
+	color: var(--tetriary-color);
+}
+
+.footer-links .active {
+	font-weight: normal;
+	text-decoration: none;
+}
+
 /* * * * * * * *
 	4.HOME
 * * * * * * * */
