--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -127,8 +127,31 @@ nav {
 	color: var(--secondary-color);
 }
 
+#nav-cart-link {
+	position: relative;
+}
+
+#nav-cart-link:hover,
+#nav-cart-link:focus {
+	color: var(--off-white);
+}
+
 .cart-icon {
 	width: 30px;
+}
+
+.item-count {
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 14px;
+	width: 20px;
+	height: 20px;
+	bottom: 0;
+	right: 0;
+	background-color: var(--secondary-color);
+	border-radius: 50%;
 }
 
 @media(max-width: 850px) {
