--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -496,3 +496,58 @@ footer h3 {
 	font-weight: bold;
 	color: var(--tetriary-color);
 }
+
+/* * * * * * * *
+  6.CHECKOUT 
+* * * * * * * */
+
+.checkout-table-section {
+	min-height: 80vh;
+	margin: 2rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: var(--normal-text-size);
+}
+
+.checkout-table-section h2 {
+	color: var(--secondary-color);
+	font-size: var(--biger-text-size);
+	font-weight: bold;
+	text-align: center;
+}
+
+.checkout-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 1rem;
+}
+
+.remove-button {
+	font-family: Roboto;
+	color: var(--tetriary-color);
+	cursor: pointer;
+}
+
+.remove-button:hover,
+.remove-button:focus {
+	text-decoration: underline;
+}
+
+.checkout-table {
+	table-layout: fixed;
+}
+
+.checkout-table td {
+	padding: 1rem;
+}
+
+.checkout-table tr:last-child {
+	border-top: 2px solid var(--secondary-color);
+}
+
+#total-price {
+	font-weight: bold;
+	color: var(--secondary-color);
+}
