--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -703,7 +703,8 @@ footer h3 {
 	display: grid;
 	grid-template-areas: 
 		'title title'
-		'image desc';
+		'image desc'
+		'recs recs';
 	gap: 20px;
 }
 
@@ -756,12 +757,29 @@ footer h3 {
 	color:var(--warning-red);
 }
 
+.rec-carousel-section {
+	grid-area: recs;
+	max-width: 80vw;
+}
+
+.rec-carousel-section h2 {
+	font-size: var(--biger-text-size);
+	font-weight: bold;
+}
+
+.rec-carousel-section .game-carousel-container {
+	height: 550px;
+	align-items: normal;
+	gap: 10px;
+}
+
 @media(max-width: 850px) {
 	.game-details-wrapper{
 		grid-template-areas: 
 			'title'
 			'image'
-			'desc';
+			'desc'
+			'recs';
 	}
 	.game-details-details-section {
 		gap: 1rem;
